samples/_failures_safe/1761562784_ef51f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d75f86c.c: In function ‘main’:
./samples/SAFE/__tmp_1d75f86c.c:164:9: error: expected identifier at end of input
  164 |         printf("  %s: '%s'\n", token_type_name(tokens->tokens[i].type), tokens->tokens[i].
      |         ^~~~~~
./samples/SAFE/__tmp_1d75f86c.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1d75f86c.c:164:9: error: expected declaration or statement at end of input
